# translation-service

./: .cnb.yml  Cargo.toml  Dockerfile  Dockerfile.enzh  README.md  README_ZH.md
src/: endpoint.rs  inference.rs  main.rs  translation.rs
